--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h1 class="fw-bold lh-2 mb-4">Startup Digital Untuk Kebutuhan Bisnis Anda</h1>
                     <p class="lead mb-5">Kami dapat membantu bisnis Anda melalui solusi digital yang inovatif. Mulai dari pengembangan website hingga solusi teknologi. Efisien, kreatif, dan siap menjadi parter bisnis Anda.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a href="https://api.whatsapp.com/send?phone=6281377783334&text=Assalamualaikum.." class="btn btn-primary rounded-pill px-4 py-2"><i class="bi bi-whatsapp me-2"></i> Let's talk with us</a>
+                        <a href="https://api.whatsapp.com/send?phone=6282141155240&text=Assalamualaikum.." class="btn btn-primary rounded-pill px-4 py-2"><i class="bi bi-whatsapp me-2"></i> Let's talk with us</a>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
                                 <a href="https://pustakakoding.com/project-php-detail-aplikasi-kasir-jasa-cuci-mobil-dan-motor" target="_blank">
-                                    <img src="assets/img/portfolio/pustakakoding-aplikasi-kasir-jasa-cuci-mobil-dan-motor.jpg" alt="Portfolio" class="card-img-top img-fluid rounded-4">
+                                    <img src="assets/img/portfolio/accounting_web_app.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
                             <p class="fw-semibold">Aplikasi Web Akuntansi PT Rahmat Alam Samudera</p>
@@ -205,7 +205,7 @@
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
                                 <a href="https://pustakakoding.com/project-php-detail-aplikasi-manajemen-keuangan-pribadi-single-user" target="_blank">
-                                    <img src="assets/img/portfolio/pustakakoding-aplikasi-manajemen-keuangan-pribadi-single-user.jpg" alt="Portfolio" class="card-img-top img-fluid rounded-4">
+                                    <img src="assets/img/portfolio/web_xr.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
                             <p class="fw-semibold">Aplikasi Web XR PLN Tour</p>
@@ -217,7 +217,7 @@
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
                                 <a href="https://pustakakoding.com/project-php-detail-aplikasi-manajemen-kas-berbasis-web" target="_blank">
-                                    <img src="assets/img/portfolio/pustakakoding-aplikasi-manajemen-kas-berbasis-web.jpg" alt="Portfolio" class="card-img-top img-fluid rounded-4">
+                                    <img src="assets/img/portfolio/attendance_web_app.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
                             <p class="fw-semibold">Aplikasi Web Absensi</p>
@@ -274,7 +274,7 @@
 
             <div class="row align-items-start text-start g-5 pt-4 pb-5">
                 <div class="col-lg-7">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127101.59148701998!2d105.19743545987781!3d-5.428404621346565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40dbcabf21b51f%3A0xdcb06324bff3cb9e!2sBandar%20Lampung%20City%2C%20Lampung!5e0!3m2!1sen!2sid!4v1670074127117!5m2!1sen!2sid" class="rounded-4 shadow-sm" width="100%" height="410" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126646.20960986792!2d112.63028049772383!3d-7.27561200602917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbf8381ac47f%3A0x3027a76e352be40!2sSurabaya%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1760700146974!5m2!1sid!2sid" class="rounded-4 shadow-sm" width="100%" height="410" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-lg-5">
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
@@ -285,7 +285,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">Address</h5>
-                                    <p>Bandar Lampung City, Lampung</p>
+                                    <p>Surabaya City, Jawa Timur</p>
                                 </div>
                             </div>
                             <hr class="hr-dotted mt-0">
@@ -295,7 +295,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">WhatsApp</h5>
-                                    <p>+62 813-7778-3334</p>
+                                    <p>+62 821-4115-5240</p>
                                 </div>
                             </div>
                             <hr class="hr-dotted mt-0">
@@ -305,7 +305,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">Email</h5>
-                                    <p>pustaka.koding@gmail.com</p>
+                                    <p>digitaldreamnet@gmail.com</p>
                                 </div>
                             </div>
                             <hr class="hr-dotted mt-0">
