--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <meta name="author" content="Indra Styawantoro">
 
     <!-- Title -->
-    <title>Digital Creative</title>
+    <title>Digital Dream</title>
 
     <!-- Favicon icon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo-removebg-preview.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -40,11 +40,11 @@
 
 <body id="home" class="d-flex flex-column h-100">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light py-4 bg-nav">
+    <nav class="navbar navbar-expand-lg navbar-light py-4 bg-nav sticky-top">
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">
-                <img src="assets/img/logo.png" alt="Digital Creative" width="42" height="42" class="d-inline-block mt--2 me-2">
+                <img src="assets/img/logo-removebg-preview.png" alt="Digital Creative" width="42" height="42" class="d-inline-block mt--2 me-2">
                 <span class="text-body fs-4 fw-bolder">Digital Dream</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -117,7 +117,7 @@
 
             <div class="row py-4">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <div class="card border-0 rounded-4 shadow-sm">
+                    <div class="card border-0 rounded-4 shadow-sm h-100">
                         <div class="card-body p-3 p-sm-5">
                             <div class="feature-icon-1 bg-primary bg-gradient mb-4">
                                 <i class="bi bi-robot"></i>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <div class="card border-0 rounded-4 shadow-sm">
+                    <div class="card border-0 rounded-4 shadow-sm h-100">
                         <div class="card-body p-3 p-sm-5">
                             <div class="feature-icon-1 bg-primary bg-gradient mb-4">
                                 <i class="bi-code-slash"></i>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <div class="card border-0 rounded-4 shadow-sm">
+                    <div class="card border-0 rounded-4 shadow-sm h-100">
                         <div class="card-body p-3 p-sm-5">
                             <div class="feature-icon-1 bg-primary bg-gradient mb-4">
                                 <i class="bi-display"></i>
