--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body id="home" class="d-flex flex-column h-100">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light py-4 bg-nav sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light py-4 bg-nav fixed-top z-3">
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">
@@ -52,7 +52,7 @@
             </button>
             <div class="collapse navbar-collapse py-3 py-lg-1" id="navbarSupportedContent">
                 <!-- Menu -->
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mx-auto mb-2 me-0 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link mx-3" href="#home">Home</a>
                     </li>
@@ -70,7 +70,7 @@
                     </li>
                 </ul>
                 <!-- Social Media -->
-                <div class="d-flex mt-3 ms-3 mt-md-0 ms-md-0">
+                <!-- <div class="d-flex mt-3 ms-3 mt-md-0 ms-md-0">
                     <a href="https://facebook.com/pustaka.koding" target="_blank" class="btn btn-social-media me-3">
                         <i class="bi bi-facebook"></i>
                     </a>
@@ -83,7 +83,7 @@
                     <a href="https://github.com/digitaldream-lab" target="_blank" class="btn btn-social-media">
                         <i class="bi bi-github"></i>
                     </a>
-                </div> 
+                </div> -->
             </div> 
         </div>
     </nav>
@@ -91,7 +91,7 @@
     <!-- Main Content -->
     <main class="flex-shrink-0">
         <!-- Heroes -->
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-5" style="margin-top: 10%;">
             <div class="row flex-lg-row-reverse align-items-center g-5">
                 <div class="col-lg-5">
                     <img src="assets/img/heroes.svg" class="d-block mx-lg-auto img-fluid" alt="Digital Creative" loading="lazy">
@@ -107,7 +107,7 @@
         </div>
 
         <!-- Services -->
-        <div id="services" class="container text-center py-5">
+        <div id="services" class="text-center py-5 px-5 w-100 mt-5" style="background-color: #f3f3f3;">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h3 class="fw-bold lh-2 mb-3">OUR SERVICES</h3>
@@ -183,7 +183,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h3 class="fw-bold lh-2 mb-3">OUR PORTFOLIO</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                    <p class="lead">Cek portofolio produk yang telah kami buat sebelumnya</p>
                 </div>
             </div>
 
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <!-- <div class="col-lg-4 mb-4">
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
@@ -259,7 +259,7 @@
                             <p class="fw-semibold">Sistem Informasi Persediaan Barang Gudang Material</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -268,15 +268,15 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h3 class="fw-bold lh-2 mb-3">CONTACT US</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                    <p class="lead">Hubungi kami jika anda berminat untuk bekerja sama dengan kami atau ajukan pertanyaan.</p>
                 </div>
             </div>
 
             <div class="row align-items-start text-start g-5 pt-4 pb-5">
-                <div class="col-lg-7">
+                <div class="col-lg-6">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126646.20960986792!2d112.63028049772383!3d-7.27561200602917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbf8381ac47f%3A0x3027a76e352be40!2sSurabaya%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1760700146974!5m2!1sid!2sid" class="rounded-4 shadow-sm" width="100%" height="410" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="d-flex py-2">
@@ -284,7 +284,7 @@
                                     <i class="bi bi-geo-alt text-primary fs-3"></i>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <h5 class="mb-1">Address</h5>
+                                    <h5 class="mb-1">Alamat</h5>
                                     <p>Surabaya City, Jawa Timur</p>
                                 </div>
                             </div>
@@ -314,8 +314,31 @@
                                     <i class="bi bi-clock text-primary fs-4"></i>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <h5 class="mb-1">Working Hours</h5>
+                                    <h5 class="mb-1">Jam Kerja</h5>
                                     <p>Monday - Saturday, 09.00 AM - 16.00 PM</p>
+                                </div>
+                            </div>
+                            <hr class="hr-dotted mt-0">
+                            <div class="d-flex py-2">
+                                <div class="flex-shrink-0">
+                                    <i class="bi bi-people text-primary fs-4"></i>
+                                </div>
+                                <div class="flex-grow-1 ms-3 mb-3">
+                                    <h5 class="mb-3">Sosial Media Kami</h5>
+                                    <div class="d-flex mt-3 mt-md-0 ms-md-0">
+                                        <a href="https://facebook.com/pustaka.koding" target="_blank" class="btn btn-social-media me-3">
+                                            <i class="bi bi-facebook"></i>
+                                        </a>
+                                        <a href="https://www.instagram.com/pustakakoding/" target="_blank" class="btn btn-social-media me-3">
+                                            <i class="bi bi-instagram"></i>
+                                        </a>
+                                        <a href="https://www.youtube.com/channel/UCbgv9z5lRwtXX_lUZ5-x8Ew" target="_blank" class="btn btn-social-media me-3">
+                                            <i class="bi bi-youtube"></i>
+                                        </a>
+                                        <a href="https://github.com/digitaldream-lab" target="_blank" class="btn btn-social-media">
+                                            <i class="bi bi-github"></i>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
