--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                 <!-- Menu -->
                 <ul class="navbar-nav mx-auto mb-2 me-0 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#home">Home</a>
+                        <a class="nav-link mx-3" href="#home">Beranda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#services">Services</a>
+                        <a class="nav-link mx-3" href="#services">Layanan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#about">About</a>
+                        <a class="nav-link mx-3" href="#about">Tentang Kami</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-3" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#contact">Contact</a>
+                        <a class="nav-link mx-3" href="#contact">Kontak</a>
                     </li>
                 </ul>
                 <!-- Social Media -->
@@ -100,7 +100,7 @@
                     <h1 class="fw-bold lh-2 mb-4">Startup Digital Untuk Kebutuhan Bisnis Anda</h1>
                     <p class="lead mb-5">Kami dapat membantu bisnis Anda melalui solusi digital yang inovatif. Mulai dari pengembangan website hingga solusi teknologi. Efisien, kreatif, dan siap menjadi parter bisnis Anda.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a href="https://api.whatsapp.com/send?phone=6282141155240&text=Assalamualaikum.." class="btn btn-primary rounded-pill px-4 py-2"><i class="bi bi-whatsapp me-2"></i> Let's talk with us</a>
+                        <a href="https://api.whatsapp.com/send?phone=6282141155240&text=Assalamualaikum.." class="btn btn-primary rounded-pill px-4 py-2"><i class="bi bi-whatsapp me-2"></i> Hubungi Kami...</a>
                     </div>
                 </div>
             </div>
@@ -150,13 +150,54 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h3 class="fw-bold lh-2 mb-3">OUR SERVICES</h3>
+                    <p class="lead">Kami menyediakan beberapa layanan yang dapat membantu mempermudah bisnis Anda.</p>
+                </div>
+            </div>
+            <div class="row py-4">
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <div class="card border-0 rounded-4 shadow-sm h-100">
+                        <div class="card-body p-3 p-sm-5">
+                            <div class="feature-icon-1 bg-primary bg-gradient mb-4">
+                                <i class="bi bi-robot"></i>
+                            </div>
+                            <h3>Otomation Tools</h3>
+                            <p>Mengotomatisasi proses bisnis Anda untuk mempercepat produktivitas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <div class="card border-0 rounded-4 shadow-sm h-100">
+                        <div class="card-body p-3 p-sm-5">
+                            <div class="feature-icon-1 bg-primary bg-gradient mb-4">
+                                <i class="bi-code-slash"></i>
+                            </div>
+                            <h3>Web Development</h3>
+                            <p>Pengembangan website profesional yang responsif, cepat, dan sesuai kebutuhan bisnis Anda.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <div class="card border-0 rounded-4 shadow-sm h-100">
+                        <div class="card-body p-3 p-sm-5">
+                            <div class="feature-icon-1 bg-primary bg-gradient mb-4">
+                                <i class="bi-display"></i>
+                            </div>
+                            <h3>Digital Marketing</h3>
+                            <p>Peningkatan penjualan bisnis Anda melalui media sosial dan digital.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- About -->
         <div id="about" class="container text-center py-5">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h3 class="fw-bold lh-2 mb-3">ABOUT US</h3>
+                    <h3 class="fw-bold lh-2 mb-3">LAYANAN KAMI</h3>
                     <p class="lead">Kami siap menjadi parter bisnis Anda untuk segala jenis kebutuhan digital.</p>
                 </div>
             </div>
@@ -182,7 +223,7 @@
         <div id="portfolio" class="container text-center py-5">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h3 class="fw-bold lh-2 mb-3">OUR PORTFOLIO</h3>
+                    <h3 class="fw-bold lh-2 mb-3">PORTFOLIO KAMI</h3>
                     <p class="lead">Cek portofolio produk yang telah kami buat sebelumnya</p>
                 </div>
             </div>
@@ -267,7 +308,7 @@
         <div id="contact" class="container text-center pt-4 pb-5">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h3 class="fw-bold lh-2 mb-3">CONTACT US</h3>
+                    <h3 class="fw-bold lh-2 mb-3">Kontak Kami</h3>
                     <p class="lead">Hubungi kami jika anda berminat untuk bekerja sama dengan kami atau ajukan pertanyaan.</p>
                 </div>
             </div>
@@ -315,7 +356,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">Jam Kerja</h5>
-                                    <p>Monday - Saturday, 09.00 AM - 16.00 PM</p>
+                                    <p>Senin - Sabtu, 09.00 AM - 16.00 PM</p>
                                 </div>
                             </div>
                             <hr class="hr-dotted mt-0">
