--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!-- Website Company Profile "Digital Creative" (free)
-******************************************************************
-* Developer   : Indra Styawantoro
-* Company     : Pustaka Koding
-* Release     : Desember 2022
-* Update      : -
-* Website     : pustakakoding.com
-* E-mail      : pustaka.koding@gmail.com
-* WhatsApp    : +62-813-7778-3334
--->
-
 <!doctype html>
 <html lang="en" class="h-100">
 
@@ -16,14 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Website Company Profile Digital Creative">
-    <meta name="author" content="Indra Styawantoro">
+    <meta name="description" content="Digital Dream Company Profile Website">
+    <meta name="author" content="Digital Dream Team">
 
     <!-- Title -->
     <title>Digital Dream</title>
 
     <!-- Favicon icon -->
-    <link rel="shortcut icon" href="assets/img/logo-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -44,7 +33,7 @@
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">
-                <img src="assets/img/logo-removebg-preview.png" alt="Digital Creative" width="42" height="42" class="d-inline-block mt--2 me-2">
+                <img src="assets/img/logo.png" alt="Digital Creative" width="42" height="42" class="d-inline-block mt--2 me-2">
                 <span class="text-body fs-4 fw-bolder">Digital Dream</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,21 +58,6 @@
                         <a class="nav-link mx-3" href="#contact">Kontak</a>
                     </li>
                 </ul>
-                <!-- Social Media -->
-                <!-- <div class="d-flex mt-3 ms-3 mt-md-0 ms-md-0">
-                    <a href="https://facebook.com/pustaka.koding" target="_blank" class="btn btn-social-media me-3">
-                        <i class="bi bi-facebook"></i>
-                    </a>
-                    <a href="https://www.instagram.com/pustakakoding/" target="_blank" class="btn btn-social-media me-3">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCbgv9z5lRwtXX_lUZ5-x8Ew" target="_blank" class="btn btn-social-media me-3">
-                        <i class="bi bi-youtube"></i>
-                    </a>
-                    <a href="https://github.com/digitaldream-lab" target="_blank" class="btn btn-social-media">
-                        <i class="bi bi-github"></i>
-                    </a>
-                </div> -->
             </div> 
         </div>
     </nav>
@@ -97,8 +71,8 @@
                     <img src="assets/img/heroes.svg" class="d-block mx-lg-auto img-fluid" alt="Digital Creative" loading="lazy">
                 </div>
                 <div class="col-lg-7">
-                    <h1 class="fw-bold lh-2 mb-4">Otomasi Data Anda, Tingkatkan Pertumbuhan Bisnis</h1>
-                    <p class="lead mb-5">Kami membantu perusahaan membangun sistem pengolahan data otomatis yang mampu menyederhanakan analisis, meningkatkan produktivitas, dan membuka peluang baru dalam strategi bisnis.</p>
+                    <h1 class="fw-bold lh-2 mb-4 text-center text-md-start">Otomasi Data Anda, Tingkatkan Pertumbuhan Bisnis</h1>
+                    <p class="lead mb-5 text-center text-md-start">Kami membantu perusahaan membangun sistem pengolahan data otomatis yang mampu menyederhanakan analisis, meningkatkan produktivitas, dan membuka peluang baru dalam strategi bisnis.</p>
                 </div>
             </div>
         </div>
@@ -242,16 +216,14 @@
                     <img src="assets/img/about.svg" class="d-block mx-lg-auto img-fluid" alt="Digital Creative" loading="lazy">
                 </div>
                 <div class="col-lg-7">
-                    <h4 class="fw-bold lh-2 mb-3" style="text-align: justify;">Startup Digital Kreatif untuk Kebutuhan Bisnis Anda</h4>
-                    <p class="">Kami adalah startup digital yang hadir untuk membantu bisnis Anda berkembang melalui solusi teknologi yang inovatif dan efisien. Dengan fokus pada pengembangan website, automation tools, dan berbagai kebutuhan digital lainnya, kami berkomitmen untuk menyediakan layanan yang tidak hanya fungsional, tetapi juga disesuaikan dengan karakter dan tujuan bisnis Anda.</p>
-                    <ul>
-                        <li>Otomatisasi Data</li>
-                        <li>Pembersihan Data</li>
-                        <li>Pengumpulan Data</li>
-                        <li>Pengisian Data</li>
-                        <li>Visualisasi Data</li>
-                    </ul>
-                    <p>Kami percaya bahwa teknologi adalah mitra strategis dalam pertumbuhan bisnis. Dari pembuatan website profesional, integrasi sistem otomatisasi, hingga pengembangan tools digital yang mendukung proses kerja—kami siap menjadi bagian dari perjalanan transformasi digital Anda.</p>
+                    <h4 class="fw-bold lh-2 mb-3 text-center text-md-start">Startup Digital Kreatif untuk Kebutuhan Bisnis Anda</h4>
+                    <p class="text-md-start" style="text-align: justify;">Kami adalah startup digital yang hadir untuk membantu bisnis Anda berkembang melalui solusi teknologi yang inovatif dan efisien. Dengan fokus pada pengembangan website, automation tools, dan berbagai kebutuhan digital lainnya, kami berkomitmen untuk menyediakan layanan yang tidak hanya fungsional, tetapi juga disesuaikan dengan karakter dan tujuan bisnis Anda.</p>
+                    <p><i class="bi-check-circle-fill mx-3 text-success"></i> Otomatisasi Data</p>
+                    <p><i class="bi-check-circle-fill mx-3 text-success"></i> Pembersihan Data</p>
+                    <p><i class="bi-check-circle-fill mx-3 text-success"></i> Pengumpulan Data</p>
+                    <p><i class="bi-check-circle-fill mx-3 text-success"></i> Pengisian Data</p>
+                    <p><i class="bi-check-circle-fill mx-3 text-success"></i> Visualisasi Data</p>
+                    <p class="text-md-start" style="text-align: justify;">Kami percaya bahwa teknologi adalah mitra strategis dalam pertumbuhan bisnis. Dari pembuatan website profesional, integrasi sistem otomatisasi, hingga pengembangan tools digital yang mendukung proses kerja—kami siap menjadi bagian dari perjalanan transformasi digital Anda.</p>
                 </div>
             </div>
         </div>
@@ -262,7 +234,7 @@
                 <div class="col-lg-11 mx-auto rounded-4 shadow-sm p-4" style="background-color: #f3f3f3;">
                     <h3 class="fw-bold lh-2 mb-3">Visi Kami</h3>
                     <blockquote class="blockquote">
-                        <p class="fs-4">"Menjadi mitra utama perusahaan dalam mentransformasi data menjadi nilai strategis melalui sistem otomatis yang cerdas, efisien, dan berdampak nyata pada produktivitas serta inovasi bisnis."</p>
+                        <p class="fs-4 text-md-center" style="text-align: justify;">"Menjadi mitra utama perusahaan dalam mentransformasi data menjadi nilai strategis melalui sistem otomatis yang cerdas, efisien, dan berdampak nyata pada produktivitas serta inovasi bisnis."</p>
                     </blockquote>
                 </div>
             </div>
@@ -276,7 +248,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row ms-1">
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="card border-0 rounded-4 shadow-sm h-100" style="background-color: #f9c2b2;">
                         <div class="card-body p-4 text-start">
@@ -383,24 +355,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 mb-4">
-                    <div class="card h-100 border-0 rounded-4 shadow-sm">
-                        <div class="card-body p-4 pb-0">
-                            <div class="mb-3">
-                                <a href="https://pustakakoding.com/project-php-detail-sistem-informasi-persediaan-barang-gudang-material" target="_blank">
-                                    <img src="assets/img/portfolio/pustakakoding-sistem-informasi-persediaan-barang-gudang-material.jpg" alt="Portfolio" class="card-img-top img-fluid rounded-4">
-                                </a>
-                            </div>
-                            <p class="fw-semibold">Sistem Informasi Persediaan Barang Gudang Material</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
 
         <!-- consult -->
         <div id="consult" class="container text-center py-5 mb-5">
-            <div class="row">
+            <div class="row ms-1">
                 <div class="col-lg-11 mx-auto rounded-4 shadow-sm p-4 bg-primary text-light" style="background-color: #0d6efd;">
                     <h1 class="fw-bold lh-2 mt-4 mb-4">Konsultasikan Dengan Kami</h1>
                     <p class="fs-6">Kami siap membantu anda dengan solusi untuk kebutuhan bisnis Anda</p>
@@ -497,12 +457,9 @@
     <!-- Footer -->
     <footer class="footer mt-auto py-4 bg-white">
         <div class="container">
-            <div class="d-flex flex-column flex-md-row align-items-center align-items-md-left text-body">
-                <div class="copyright text-center mb-2 mb-md-0">
-                    &copy; 2022 - <a href="https://pustakakoding.com/" target="_blank" class="fw-bolder">Pustaka Koding</a>. All rights reserved.
-                </div>
-                <div class="link ms-md-auto">
-                    <a href="https://pustakakoding.com/" target="_blank">Terms & Conditions</a>
+            <div class="d-flex flex-column flex-md-row align-items-center align-items-md-center text-body">
+                <div class="copyright mb-2 mb-md-0">
+                    &copy; <a href="https://pustakakoding.com/" target="_blank" class="fw-bolder text-primary">Digital Dream</a>. (2025) All rights reserved.
                 </div>
             </div>
         </div>
