add portofolio and delete link social media

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <a href="https://pustakakoding.com/project-php-detail-aplikasi-kasir-jasa-cuci-mobil-dan-motor" target="_blank">
+                                <a href="#" target="_blank">
                                     <img src="assets/img/portfolio/accounting_web_app.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
@@ -311,7 +311,7 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <a href="https://pustakakoding.com/project-php-detail-aplikasi-manajemen-kas-berbasis-web" target="_blank">
+                                <a href="https://app.fiyansa.com" target="_blank">
                                     <img src="assets/img/portfolio/attendance_web_app.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
@@ -323,7 +323,7 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <a href="https://pustakakoding.com/project-php-detail-aplikasi-kasir-penjualan-pulsa" target="_blank">
+                                <a href="https://digitalmaternityclass.id/" target="_blank">
                                     <img src="assets/img/portfolio/dmc.jpg" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
@@ -335,7 +335,7 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <a href="https://pustakakoding.com/project-php-detail-aplikasi-pengelolaan-arsip-surat" target="_blank">
+                                <a href="https://nutrimeta.online/" target="_blank">
                                     <img src="assets/img/portfolio/nutrimeta.jpg" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
@@ -347,11 +347,35 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <a href="https://pustakakoding.com/project-php-detail-aplikasi-manajemen-keuangan-pribadi-single-user" target="_blank">
+                                <a href="#" target="_blank">
                                     <img src="assets/img/portfolio/web_xr.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
                                 </a>
                             </div>
                             <p class="fw-semibold">Aplikasi Web XR PT PLN Safety Induction Tour</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 border-0 rounded-4 shadow-sm">
+                        <div class="card-body p-4 pb-0">
+                            <div class="mb-3">
+                                <a href="https://ptras.id/" target="_blank">
+                                    <img src="assets/img/portfolio/ras.png" alt="Portfolio" class="card-img-top img-fluid rounded-4">
+                                </a>
+                            </div>
+                            <p class="fw-semibold">Landing Page Profile PT Rahmat Alam Samudera</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 border-0 rounded-4 shadow-sm">
+                        <div class="card-body p-4 pb-0">
+                            <div class="mb-3">
+                                <a href="https://rajhika.or.id/" target="_blank">
+                                    <img src="assets/img/portfolio/rajh.PNG" alt="Portfolio" class="card-img-top img-fluid rounded-4">
+                                </a>
+                            </div>
+                            <p class="fw-semibold">Company Profile Yayasan Raj Hikmatul Karomah</p>
                         </div>
                     </div>
                 </div>
@@ -364,7 +388,7 @@
                 <div class="col-lg-11 mx-auto rounded-4 shadow-sm p-4 bg-primary text-light" style="background-color: #0d6efd;">
                     <h1 class="fw-bold lh-2 mt-4 mb-4">Konsultasikan Dengan Kami</h1>
                     <p class="fs-6">Kami siap membantu anda dengan solusi untuk kebutuhan bisnis Anda</p>
-                    <a href="https://api.whatsapp.com/send?phone=6282141155240&text=Assalamualaikum.." class="btn btn-success rounded-pill px-4 py-2 my-4"><i class="bi bi-whatsapp me-2"></i> Hubungi Kami...</a>
+                    <a href="https://api.whatsapp.com/send?phone=6282141155240&text=Halo, saya ingin menanyakan mengenai layanan.." class="btn btn-success rounded-pill px-4 py-2 my-4"><i class="bi bi-whatsapp me-2"></i> Hubungi Kami...</a>
                 </div>
             </div>
         </div>
@@ -432,13 +456,13 @@
                                 <div class="flex-grow-1 ms-3 mb-3">
                                     <h5 class="mb-3">Sosial Media Kami</h5>
                                     <div class="d-flex mt-3 mt-md-0 ms-md-0">
-                                        <a href="https://facebook.com/pustaka.koding" target="_blank" class="btn btn-social-media me-3">
+                                        <a href="#" target="_blank" class="btn btn-social-media me-3">
                                             <i class="bi bi-facebook"></i>
                                         </a>
-                                        <a href="https://www.instagram.com/pustakakoding/" target="_blank" class="btn btn-social-media me-3">
+                                        <a href="https://www.instagram.com/digitaldreamnet/" target="_blank" class="btn btn-social-media me-3">
                                             <i class="bi bi-instagram"></i>
                                         </a>
-                                        <a href="https://www.youtube.com/channel/UCbgv9z5lRwtXX_lUZ5-x8Ew" target="_blank" class="btn btn-social-media me-3">
+                                        <a href="" target="_blank" class="btn btn-social-media me-3">
                                             <i class="bi bi-youtube"></i>
                                         </a>
                                         <a href="https://github.com/digitaldream-lab" target="_blank" class="btn btn-social-media">
