--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
       <div class="container col-xxl-8 px-4 py-5" style="margin-top: 10%">
         <div class="row flex-lg-row-reverse align-items-center g-5">
           <div class="col-lg-5" >
-            <img data-aos="fade-left" data-aos-duration="2000"
+            <img data-aos="fade-up" data-aos-duration="2000"
               src="assets/img/heroes.svg"
               class="d-block mx-lg-auto img-fluid"
               alt="Digital Creative"
               loading="lazy"
             />
           </div>
-          <div data-aos="fade-right" data-aos-duration="2000"  class="col-lg-7">
+          <div data-aos="fade-up" data-aos-duration="2000"  class="col-lg-7">
             <h1 class="fw-bold lh-2 mb-4 text-center text-md-start">
               Otomasi Data Anda, Tingkatkan Pertumbuhan Bisnis
             </h1>
@@ -299,7 +299,7 @@
 
         <div class="row align-items-center text-start g-5 py-4">
           <div class="col-lg-5">
-            <img data-aos="fade-right" data-aos-duration="1000"
+            <img data-aos="fade-up" data-aos-duration="1000"
               src="assets/img/about.svg"
               class="d-block mx-lg-auto img-fluid"
               alt="Digital Creative"
