--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 
     <body id="home" class="d-flex flex-column h-100" style="font-family: 'Poppins', sans-serif;">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light py-4 bg-nav fixed-top z-3">
+        <nav class="navbar navbar-expand-lg navbar-light py-3 bg-nav fixed-top z-3">
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">
             <img
                 src="assets/img/logo.png"
-                alt="Digital Creative"
-                width="42"
-                height="42"
+                alt="Digital Dream"
+                width="65"
+                height="65"
                 class="d-inline-block mt--2 me-2"
             />
             <span class="text-body fs-4 fw-bolder">Digital Dream</span>
